--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ checkpoints
 dump
 packages
 
+# SLURM outputs #
+###################
+slurm*.out
+slurm*.err
+
 # Compiled source #
 ###################
 *.com
